fix: z-index on banner

--- a/frontend/scripts/react-components/cookie-banner/cookie-banner.scss
+++ b/frontend/scripts/react-components/cookie-banner/cookie-banner.scss
@@ -10,7 +10,7 @@
 
   padding: 20px 0;
 
-  z-index: $z-leaflet-above-panes;
+  z-index: $z-above-veil;
   box-shadow: $box-shadow;
   animation: appear 300ms 2s forwards;
 
